@@ -1,3 +1,11 @@
+== Version ?????? (tzdata v2011g) - ???????????
+
+* Support Ruby trunk revision 31668 and later, which removed the 
+  DateTime.new! method. Make RubyCoreSupport.datetime_new! fallback to
+  DateTime.jd instead. Thanks to Aaron Patterson for reporting the removal of
+  the new! method (issue #29233).
+
+
 == Version 0.3.27 (tzdata v2011g) - 26-Apr-2011
 
 * Updated to tzdata version 2011g
